# MessageSerialize

./: CMakeLists.txt  README.md  cmake_start.bat  main.cpp  serialize.h
.github/workflows/: cmake_clang.yml  cmake_ubuntu.yml  cmake_windows.yml
